<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation1">

    <fragment
        android:id="@+id/navigation1"
        android:name="com.falcon.unikit.ui.home.NotesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_notes" >
        <argument android:name="Notes"
            app:argType="com.falcon.usarcompanion.network.Section" />
    </fragment>

    <fragment
        android:id="@+id/navigation2"
        android:name="com.falcon.unikit.ui.dashboard.PapersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_papers" >
        <argument android:name="papers"
            app:argType="com.falcon.usarcompanion.network.Section" />
    </fragment>

    <fragment
        android:id="@+id/navigation3"
        android:name="com.falcon.unikit.ui.notifications.BooksFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_books" >
        <argument android:name="books"
            app:argType="com.falcon.usarcompanion.network.Section" />
    </fragment>
    <fragment
        android:id="@+id/navigation4"
        android:name="com.falcon.unikit.ui.main.playlists.PlaylistsFragment"
        android:label="Playlists"
        tools:layout="@layout/fragment_playlists">
        <argument android:name="Playlists"
            app:argType="com.falcon.usarcompanion.network.Section"/>
    </fragment>
    <fragment
        android:id="@+id/navigation5"
        android:name="com.falcon.unikit.ui.main.syllabus.SyllabusFragment"
        android:label="Syllabus"
        tools:layout="@layout/fragment_syllabus">
        <argument android:name="Syllabus"
            app:argType="com.falcon.usarcompanion.network.Section" />
    </fragment>
</navigation>